[gd_scene load_steps=4 format=3 uid="uid://g8k01dtj43p2"]

[ext_resource type="Script" uid="uid://2dae3b5yjua1" path="res://Scripts/shop_inside.gd" id="1_ogy7l"]
[ext_resource type="PackedScene" uid="uid://dmi0cl7oa8ghq" path="res://Scenes/inventory_ui.tscn" id="1_ov53x"]
[ext_resource type="AudioStream" uid="uid://cbeqvtnt4pogw" path="res://Assets/music/myFX/menu_click - TRACK.mp3" id="3_vkqy8"]

[node name="Shop_Inside" type="Control"]
layout_mode = 3
anchors_preset = 0
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("1_ogy7l")
metadata/_edit_use_anchors_ = true

[node name="inventory_UI" parent="." instance=ExtResource("1_ov53x")]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 112.0
offset_top = 71.0
offset_right = 112.0
offset_bottom = 71.0
grow_horizontal = 0
scale = Vector2(7.6609225, 7.6609225)

[node name="sell_dark_purple" type="Button" parent="."]
layout_mode = 0
offset_left = 879.0
offset_top = 125.0
offset_right = 1017.0
offset_bottom = 156.0
scale = Vector2(1.7101145, 1.7101145)
text = "Sell Dark Purple"

[node name="sell_light_purple" type="Button" parent="."]
layout_mode = 0
offset_left = 879.0
offset_top = 185.0
offset_right = 1017.0
offset_bottom = 216.0
scale = Vector2(1.7101145, 1.7101145)
text = "Sell Light Purple"

[node name="sell_orange" type="Button" parent="."]
layout_mode = 0
offset_left = 879.0
offset_top = 245.0
offset_right = 1017.0
offset_bottom = 276.0
scale = Vector2(1.7101145, 1.7101145)
text = "Sell Orange"

[node name="sell_salmon" type="Button" parent="."]
layout_mode = 0
offset_left = 879.0
offset_top = 304.0
offset_right = 1017.0
offset_bottom = 335.0
scale = Vector2(1.7101145, 1.7101145)
text = "Sell Salmon"

[node name="sell_blue" type="Button" parent="."]
layout_mode = 0
offset_left = 879.0
offset_top = 365.0
offset_right = 1017.0
offset_bottom = 396.0
scale = Vector2(1.7101145, 1.7101145)
text = "Sell Blue"

[node name="exit" type="Button" parent="."]
layout_mode = 0
offset_left = 41.0
offset_top = 586.0
offset_right = 137.0
offset_bottom = 617.0
text = "Leave Shop
"

[node name="buy_planter" type="Button" parent="."]
layout_mode = 0
offset_left = 879.0
offset_top = 429.0
offset_right = 1107.0
offset_bottom = 481.0
text = "Buy Planter"

[node name="buy_5" type="Button" parent="."]
layout_mode = 0
offset_left = 879.0
offset_top = 493.0
offset_right = 1101.6451
offset_bottom = 551.0
text = "Buy 5 Planters"

[node name="sell_all" type="Button" parent="."]
layout_mode = 0
offset_left = 879.0
offset_top = 64.0
offset_right = 1113.0
offset_bottom = 115.0
text = "Sell All"

[node name="hoversound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("3_vkqy8")

[connection signal="mouse_entered" from="sell_dark_purple" to="." method="_on_sell_dark_purple_mouse_entered"]
[connection signal="mouse_exited" from="sell_dark_purple" to="." method="_on_sell_dark_purple_mouse_exited"]
[connection signal="pressed" from="sell_dark_purple" to="." method="_on_button_pressed"]
[connection signal="mouse_entered" from="sell_light_purple" to="." method="_on_sell_light_purple_mouse_entered"]
[connection signal="mouse_exited" from="sell_light_purple" to="." method="_on_sell_light_purple_mouse_exited"]
[connection signal="pressed" from="sell_light_purple" to="." method="_on_sell_light_purple_pressed"]
[connection signal="mouse_entered" from="sell_orange" to="." method="_on_sell_orange_mouse_entered"]
[connection signal="mouse_exited" from="sell_orange" to="." method="_on_sell_orange_mouse_exited"]
[connection signal="pressed" from="sell_orange" to="." method="_on_sell_orange_pressed"]
[connection signal="mouse_entered" from="sell_salmon" to="." method="_on_sell_salmon_mouse_entered"]
[connection signal="mouse_exited" from="sell_salmon" to="." method="_on_sell_salmon_mouse_exited"]
[connection signal="pressed" from="sell_salmon" to="." method="_on_sell_salmon_pressed"]
[connection signal="mouse_entered" from="sell_blue" to="." method="_on_sell_blue_mouse_entered"]
[connection signal="mouse_exited" from="sell_blue" to="." method="_on_sell_blue_mouse_exited"]
[connection signal="pressed" from="sell_blue" to="." method="_on_sell_blue_pressed"]
[connection signal="mouse_entered" from="exit" to="." method="_on_exit_mouse_entered"]
[connection signal="mouse_exited" from="exit" to="." method="_on_exit_mouse_exited"]
[connection signal="pressed" from="exit" to="." method="_on_exit_pressed"]
[connection signal="mouse_entered" from="buy_planter" to="." method="_on_buy_planter_mouse_entered"]
[connection signal="mouse_exited" from="buy_planter" to="." method="_on_buy_planter_mouse_exited"]
[connection signal="pressed" from="buy_planter" to="." method="_on_buy_planter_pressed"]
[connection signal="mouse_entered" from="buy_5" to="." method="_on_buy_5_mouse_entered"]
[connection signal="mouse_exited" from="buy_5" to="." method="_on_buy_5_mouse_exited"]
[connection signal="pressed" from="buy_5" to="." method="_on_buy_5_pressed"]
[connection signal="mouse_entered" from="sell_all" to="." method="_on_sell_all_mouse_entered"]
[connection signal="mouse_exited" from="sell_all" to="." method="_on_sell_all_mouse_exited"]
[connection signal="pressed" from="sell_all" to="." method="_on_sell_all_pressed"]
